# hdr-web

./: .gitignore  Cargo.toml  README.md  index.html  todo.md
.github/workflows/: biome-code-quality.yml  biome-reviewdog.yml  rust-linting.yml  rust-tests.yml
docs/: architecture.md  spec.md  user-stories.md
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
rust-hdr/: .mise.toml  Cargo.toml
rust-hdr/src/: lib.rs
src/: lib.rs
static/: index.html
static/css/: style.css
static/js/: main.js
