[package]
name = "hdr-web-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
web-sys = { version = "0.3", features = [
    "File",
    "Blob",
    "FileReader",
    "HtmlInputElement",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
base64 = "0.21"
console_error_panic_hook = "0.1"
kamadak-exif = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
